--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "omni",
+  "name": "omni-ldpc",
   "version": "0.0.1",
   "description": "omni CLI",
-  "private": true,
   "bin": {
     "omni": "bin/omni"
   },
@@ -23,12 +22,14 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "gluegun": "^2.1.0"
+    "global": "^4.3.2",
+    "gluegun": "^2.1.0",
+    "omni-ldpc": "^0.0.1"
   },
   "devDependencies": {
-    "standard": "^12.0.1",
+    "jest": "^23.6.0",
     "prettier": "^1.12.1",
-    "jest": "^23.6.0"
+    "standard": "^12.0.1"
   },
   "jest": {
     "testEnvironment": "node"
